--- a/static/index.html
+++ b/static/index.html
@@ -14,7 +14,9 @@
                     <table id="chattbl">
                     </table>
                 </div>
-                <div id="chatentry"><input autofocus placeholder="Message..." id="input" maxlength="1000"></div>
+                <div id="chatentry">
+                    <input autofocus placeholder="Message..." id="input" maxlength="1000">
+                </div>
             </div>
             <div id="userlist"></div>
         </main>
