--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!--meta name="viewport" content="width=device-width, initial-scale=1"-->
     </head>
     <body>
         <header><div id="gear">⚙</div><div id="nom">Lou.lt</div></header>
