image plutôt que unicode pour l'icône préférences

--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,12 @@
         <!--meta name="viewport" content="width=device-width, initial-scale=1"-->
     </head>
     <body>
-        <header><div id="gear">⚙</div><div id="nom">Lou.lt</div></header>
+        <header>
+            <div id="gear">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Gear_1.svg/24px-Gear_1.svg.png">
+            </div>
+            <div id="nom">Lou.lt</div>
+        </header>
         <main>
             <div id="chat">
                 <div id="chatbox">
