anti-flood minimal, horodatage, fenêtrage

--- a/static/index.html
+++ b/static/index.html
@@ -8,9 +8,7 @@
     </head>
     <body>
         <header>
-            <div id="gear">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Gear_1.svg/24px-Gear_1.svg.png">
-            </div>
+            <div id="gear"><img src="/gear.png"></div>
             <div id="nom">Lou.lt</div>
         </header>
         <main>
@@ -25,13 +23,15 @@
             </div>
             <div id="userlist"></div>
         </main>
-        <div id="prefs">
-            <div id="prefsoverlay"></div>
-            <div id="prefswindow">
+        <div id="overlay">
+            <div id="cover"></div>
+            <div id="window">
                 <div id="close">×</div>
-                <div><input type="checkbox" id="droite"><label for="droite"> Mettre le Pokémon à droite du pseudo</label></div>
-                <div><a href="#" id="wipeck">Supprimer mon cookie</a></div>
-                <div><a href="https://github.com/4577/loult-ng" target="_blank">Code source du site</a></div>
+                <div id="prefs">
+                    <div><input type="checkbox" id="right"><label for="right"> Mettre le Pokémon à droite du pseudo</label></div>
+                    <div><a href="#" id="ckwipe">Supprimer mon cookie</a></div>
+                    <div><a href="https://github.com/4577/loult-ng" target="_blank">Code source du site</a></div>
+                </div>
             </div>
         </div>
     </body>
