Add mute all functionality

--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,7 @@
     <body>
         <header>
             <div id="gear"><img src="/gear.png"></div>
+            <div id="mutebtn">🔊</div>
             <div id="nom">Lou.lt</div>
         </header>
         <main>
