adding meta description

--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,7 @@
         <title>Lou.lt &bull; clone</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="/style.css">
+        <meta name="description" content="Un clone de Lou.lt, le célèbre t'chat pokémon.">
         <script src="/script.js"></script>
     </head>
     <body>
