icone utilisateurs en option

--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,7 @@
     <body>
         <header>
             <div id="sidebtns">
+                <img src="/img/users.png" id="userswitch">
                 <img src="/img/speaker.png" id="speaker">
                 <img src="/img/gear.png" id="gear">
             </div>
