--- a/static/index.html
+++ b/static/index.html
@@ -37,6 +37,7 @@
                     <div><input type="checkbox" id="right"><label for="right"> Mettre le Pokémon à droite du pseudo</label></div>
                     <div>Volume : <input type="range" value="100" id="volrange"></div>
                     <div><input type="button" value="Supprimer mon cookie" id="ckwipe"></div>
+                    <div><a href="http://underfoule.xyz/loult/dico-louspeak.html">Dictionnaiwe louspeak</a></div>
                     <div><a href="https://github.com/4577/loult-ng" target="_blank">Code source du site</a></div>
                 </div>
             </div>
