Adding language support

--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,11 @@
     <body>
         <header>
             <div id="sidebtns">
+                <select id="lang">
+                    <option value="fr">FR</option>
+                    <option value="en">EN</option>
+                    <option value="es">ES</option>
+                </select>
                 <img src="/img/speaker.png" id="speaker">
                 <img src="/img/gear.png" id="gear">
                 <img src="/img/users.png" id="userswitch">
@@ -37,7 +42,7 @@
                     <div><input type="checkbox" id="right"><label for="right"> Mettre le Pokémon à droite du pseudo</label></div>
                     <div>Volume : <input type="range" value="100" id="volrange"></div>
                     <div><input type="button" value="Supprimer mon cookie" id="ckwipe"></div>
-                    <div id="louspeak"><a href="http://underfoule.xyz/loult/dico-louspeak.html" target="_blank">Dictionnaiwe louspeak</a></div>
+                    <div id="louspeak"><a href="http://underfoule.xyz/loult/dico-louspeak.html" target="_blank">Dictionnaire louspeak</a></div>
                     <div><a href="https://github.com/4577/loult-ng" target="_blank">Code source du site</a></div>
                 </div>
             </div>
