--- a/static/index.html
+++ b/static/index.html
@@ -15,6 +15,7 @@
                     <option value="fr">FR</option>
                     <option value="en">EN</option>
                     <option value="es">ES</option>
+                    <option value="de">DE</option>
                 </select>
                 <img src="/img/speaker.png" id="speaker">
                 <img src="/img/gear.png" id="gear">
