Image functionality. Adds "python-magic" dependency. Demo here: "http://theupdate.info" (No sound, cbf installing espeak)

--- a/static/index.html
+++ b/static/index.html
@@ -31,6 +31,7 @@
                 </div>
                 <div id="chatentry">
                     <input autofocus placeholder="Message..." id="input" maxlength="500">
+                    <div id="preview"><input style="display:none;" type="file" id="upbutton"></input></div>
                 </div>
             </div>
             <div id="userlist"></div>
