Removed cookie wipe, added speech recognition

--- a/static/index.html
+++ b/static/index.html
@@ -52,7 +52,7 @@
 					<div>Volume : <input type="range" value="100" id="volrange"></div>
 					<div><input type="checkbox" id="dt"><label for="dt">Date</label><input type="checkbox" id="hr"><label for="hr">Heure</label></div>
 					<div><input type="checkbox" id="right"><label for="right">Aligner les Pokémons à droite</label></div>
-					<div><input type="button" value="Supprimer mon cookie" id="ckwipe"></div>
+					<!--<div><input type="button" value="Supprimer mon cookie" id="ckwipe"></div>-->
 					<div><a href="http://underfoule.xyz/loult/dico-louspeak.html" target="_blank">Dictionnaire louspeak</a></div>
 					<div><a href="https://github.com/4577/loult-ng" target="_blank">Code source du site</a></div>
 				</div>
