--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,9 @@
 	</head>
 	<body>
 		<header id="head">
-			<h1>Lou.lt</h1>
+			<span>
+				<img src="./img/logo.svg" alt="Lou.lt" id="Lou.lt">
+			</span>
 			<div id="sidebtns">
 				<select id="lang">
 					<option value="fr">FR</option>
