La plupart du coté serveur pour l'autobahn a été implémenté, reste plus que les petits détails coté client et ça devrait être bon we we
Former-commit-id: dfd4002ab38b5b8cf215b72ef4a915533372c61a

--- a/static/index.html
+++ b/static/index.html
@@ -31,7 +31,7 @@
 					</table>
 				</div>
 				<div id="chatentry">
-					<input autofocus placeholder="Message..." id="input" maxlength="500">
+					<input autofocus placeholder="Message ou attaque avec '/attack <pokémon>'" id="input" maxlength="500">
 				</div>
 			</div>
 			<div id="userlist">
