--- a/static/index.html
+++ b/static/index.html
@@ -5,14 +5,14 @@
 		<meta charset="utf-8">
 		<meta name="description" content="Un clone de Lou.lt, le célèbre t'chat Pokémon.">
 		<meta name="viewport" content="width=device-width, initial-scale=0.7">
-		<link rel="icon" type="image/x-icon" href="./favicon.ico" />
-		<link rel="stylesheet" href="./style.css">
-		<script src="./script.js"></script>
+		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+		<link rel="stylesheet" href="/style.css">
+		<script src="/script.js"></script>
 	</head>
 	<body>
 		<header id="head">
 			<span>
-				<img src="./img/logo.svg" alt="Lou.lt" id="Lou.lt">
+				<img src="/img/logo.svg" alt="Lou.lt" id="Lou.lt">
 			</span>
 			<div id="sidebtns">
 				<select id="lang">
@@ -21,9 +21,9 @@
 					<option value="es">ES</option>
 					<option value="de">DE</option>
 				</select>
-				<img src="./img/speaker.png" alt="Son" id="speaker">
-				<img src="./img/gear.png" alt="Réglages" id="gear">
-				<img src="./img/users.png" alt="Utilisateurs" id="userswitch">
+				<img src="/img/speaker.png" alt="Son" id="speaker">
+				<img src="/img/gear.png" alt="Réglages" id="gear">
+				<img src="/img/users.png" alt="Utilisateurs" id="userswitch">
 			</div>
 		</header>
 		<main id="main">
