--- a/static/index.html
+++ b/static/index.html
@@ -5,9 +5,9 @@
 		<meta charset="utf-8">
 		<meta name="description" content="Un clone de Lou.lt, le célèbre t'chat Pokémon.">
 		<meta name="viewport" content="width=device-width, initial-scale=0.7">
-		<link rel="icon" type="image/x-icon" href="./favicon.ico" />
-		<link rel="stylesheet" href="./style.css">
-		<script src="./script.js"></script>
+		<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+		<link rel="stylesheet" href="/style.css">
+		<script src="/script.js"></script>
 	</head>
 	<body>
 		<header id="head">
