Stop F5 spamming + some CSS additions
Former-commit-id: 7a0ffc2cfc2535b15b7b1743436298c039d2f5c4

--- a/static/index.html
+++ b/static/index.html
@@ -20,6 +20,7 @@
 				<img src="/img/users.png" alt="Utilisateurs" id="userswitch">
 			</div>
 		</header>
+		<div id="underlay"></div>
 		<main id="main">
 			<div id="chat">
 				<div id="chatbox">
