--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Lou.lt &bull; clone</title>
+		<title>Loult.family</title>
 		<meta charset="utf-8">
 		<meta name="description" content="Un clone de Lou.lt, le célèbre t'chat Pokémon.">
 		<meta name="viewport" content="width=device-width, initial-scale=0.7">
@@ -11,16 +11,17 @@
 	</head>
 	<body>
 		<header id="head">
-			<span>
-				<img src="/img/logo.svg" alt="Lou.lt" id="Lou.lt">
-			</span>
+			<div>
+				<img src="img/logo.svg" alt="Loult" title="Loult">
+			</div>
 			<div id="sidebtns">
-				<img src="/img/speaker.png" alt="Son" id="speaker">
-				<img src="/img/gear.png" alt="Réglages" id="gear">
-				<img src="/img/users.png" alt="Utilisateurs" id="userswitch">
+				<div class="btn" id="speaker">🔊</div>
+				<div class="btn" id="gear">🔧</div>
+				<div class="btn" id="userswitch">👤</div>
 			</div>
 		</header>
-		<div id="underlay"></div>
+		<div id="underlay">
+		</div>
 		<main id="main">
 			<div id="chat">
 				<div id="chatbox">
@@ -39,15 +40,20 @@
 			</div>
 		</main>
 		<div id="overlay">
-			<div id="cover"></div>
+			<div id="cover">
+			</div>
 			<div id="window">
 				<div id="prefsttl">
 					Préférences
-					<div id="close">×</div>
+					<div id="close">✖</div>
 				</div>
 				<div id="prefs">
-					<div><span>Volume :</span><input type="range" value="100" id="volrange"></div>
-					<div><span>Langue :</span>
+					<div>
+						<span>Volume :</span>
+						<input type="range" value="100" id="volrange">
+					</div>
+					<div>
+						<span>Langue :</span>
 						<select id="lang">
 							<option value="fr">FR</option>
 							<option value="en">EN</option>
@@ -55,11 +61,21 @@
 							<option value="de">DE</option>
 						</select>
 					</div>
-					<div><span>Thème :</span><input type="radio" name="theme" value="day" id="day"><label for="day">Jouw</label><input type="radio" name="theme" value="night" id="night"><label for="night">Nuiw</label></div>
-					<div><span>Affichage :</span><input type="checkbox" id="dt"><label for="dt">Date</label><input type="checkbox" id="hr"><label for="hr">Heure</label></div>
-					<div><span>Alignement :</span><input type="radio" name="align" value="right" id="right"><label for="right">Droite</label><input type="radio" name="align" value="left" id="left"><label for="left">Gauche</label></div>
-					<!--<div><input type="button" value="Supprimer mon cookie" id="ckwipe"></div>-->
-					<div><a href="http://underfoule.xyz/loult/dico-louspeak.html" target="_blank">Dictionnaire</a> - <a href="https://github.com/4577/loult-ng" target="_blank">GitHub</a></div>
+					<div>
+						<span>Thème :</span><input type="radio" name="theme" value="day" id="day"><label for="day">Jouw</label><input type="radio" name="theme" value="night" id="night"><label for="night">Nuiw</label>
+					</div>
+					<div>
+						<span>Affichage :</span><input type="checkbox" id="dt"><label for="dt">Date</label><input type="checkbox" id="hr"><label for="hr">Heure</label>
+					</div>
+					<div>
+						<span>Alignement :</span><input type="radio" name="align" value="right" id="right"><label for="right">Droite</label><input type="radio" name="align" value="left" id="left"><label for="left">Gauche</label>
+					</div>
+					<!--<div>
+						<input type="button" value="Supprimer mon cookie" id="ckwipe">
+					</div>-->
+					<div>
+						<a href="http://underfoule.xyz/loult/dico-louspeak.html" target="_blank">Dictionnaire</a> - <a href="https://github.com/4577/loult-ng" target="_blank">GitHub</a>
+					</div>
 				</div>
 			</div>
 		</div>
