--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<header id="head">
 			<div>
-				<img src="img/logo.svg" alt="Loult" title="Loult">
+				<img src="/img/logo.svg" alt="Loult" title="Loult">
 			</div>
 			<div id="sidebtns">
 				<div class="btn" id="speaker">🔊</div>
