--- a/static/index.html
+++ b/static/index.html
@@ -62,7 +62,13 @@
 						</select>
 					</div>
 					<div>
-						<span>Thème :</span><input type="radio" name="theme" value="day" id="day"><label for="day">Jouw</label><input type="radio" name="theme" value="night" id="night"><label for="night">Nuiw</label>
+						<span>Thème :</span>
+						<select id="theme">
+							<option value="day">Jouw</option>
+							<option value="night">Nuiw</option>
+							<option value="day comic">Blbe Zre</option>
+							<option value="night rainbow">Mrle</option>
+						</select>
 					</div>
 					<div>
 						<span>Affichage :</span><input type="checkbox" id="dt"><label for="dt">Date</label><input type="checkbox" id="hr"><label for="hr">Heure</label>
