--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
 		<link rel="icon" type="image/x-icon" href="/favicon.ico">
 		<link rel="stylesheet" href="/style.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-		<script src="./script.js"></script>
+		<script src="/script.js"></script>
 	</head>
 	<body>
 		<header id="head">
