--- a/static/index.html
+++ b/static/index.html
@@ -67,8 +67,11 @@
 						<select id="theme">
 							<option value="day">Jouw</option>
 							<option value="night">Nuiw</option>
-							<option value="day comic">Blbe Zre</option>
+							<option value="day comic">Bulbi Jouw</option>
+							<option value="night comic">Bulbi Nuiw</option>
 							<option value="night rainbow">Mrle</option>
+							<option value="day hd">Turfu</option>
+							<option value="night hd">Toumiwmiw</option>
 						</select>
 					</div>
 					<div>
