--- a/static/index.html
+++ b/static/index.html
@@ -87,7 +87,7 @@
 						<a href="http://underfoule.xyz/loult/dico-louspeak.html" target="_blank">Dictionnaire</a> &bull; <a href="https://github.com/4577/loult-ng" target="_blank">GitHub</a>
 					</div>
 					<div>
-						<a title="Les Sept Mercenaires"><img src="/pokemon/271.gif"><img src="/pokemon/251.gif"><img src="/pokemon/425.gif"><img src="/pokemon/183.gif"><img src="/pokemon/207.gif"><img src="/pokemon/156.gif"><img src="/pokemon/145.gif"></a>
+						<img src="/pokemon/271.gif"><img src="/pokemon/251.gif"><img src="/pokemon/425.gif"><img src="/pokemon/183.gif"><img src="/pokemon/207.gif"><img src="/pokemon/156.gif"><img src="/pokemon/213.gif"><img src="/pokemon/145.gif">
 					</div>
 				</div>
 			</div>
