--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Loult.family</title>
 		<meta charset="utf-8">
-		<meta name="description" content="Un clone de Lou.lt, le célèbre t'chat Pokémon.">
+		<meta name="description" content="Le célèbre t'chat Pokémon, anciennement Lou.lt">
 		<meta name="viewport" content="width=device-width, initial-scale=0.7">
 		<link rel="icon" type="image/x-icon" href="/favicon.ico">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -13,81 +13,46 @@
 	<body>
 		<header id="head">
 			<div>
-				<img src="/img/logo.svg" alt="Loult" title="Loult">
-			</div>
-			<div id="sidebtns">
-				<div class="btn" id="speaker"><i class="material-icons" id="vol">volume_up</i></div>
-				<div class="btn" id="gear"><i class="material-icons">settings</i></div>
-				<div class="btn" id="userswitch"><i class="material-icons">people</i></div>
+				<img src="/img/logo_shiny.svg" alt="Loult 3.0">
 			</div>
 		</header>
-		<div id="underlay">
-		</div>
 		<main id="main">
-			<div id="chat">
-				<div id="chatbox">
-					<table id="chattbl">
-					</table>
-				</div>
-				<div id="chatentry">
-					<input autofocus placeholder="Message..." id="input" maxlength="500">
-				</div>
-			</div>
-			<div id="userlist">
-				<div id="wrap">
-					<table id="usertbl">
-					</table>
-				</div>
-			</div>
+			<div id="underlay"></div>
+			<div id="chat"></div>
+			<ul id="userlist"></ul>
 		</main>
-		<div id="overlay">
-			<div id="cover">
+		<footer id="foot">
+			<input autofocus placeholder="Message..." id="input" maxlength="500">
+			<div>
+				<i class="material-icons" id="mic">mic_off</i>
+				<i class="material-icons" id="vol">volume_up</i>
+				<i class="material-icons" id="gear">settings</i>
+				<i class="material-icons" id="userswitch">people</i>
 			</div>
+		</footer>
+		<div id="bar"><div id="xp"></div><div id="lv"></div></div>
+		<div id="overlay">
+			<div id="cover"></div>
 			<div id="window">
-				<div id="prefsttl">
-					Préférences
-					<div id="close"><i class="material-icons">clear</i></div>
-				</div>
-				<div id="prefs">
+				<div>Préférences<i class="material-icons" id="close">clear</i></div>
+				<div>
 					<div>
-						<span>Volume :</span>
-						<input type="range" value="100" id="volrange">
+						<span>Volume :</span><input type="range" value="100" id="volrange">
 					</div>
 					<div>
-						<span>Langue :</span>
-						<select id="lang">
-							<option value="fr">FR</option>
-							<option value="en">EN</option>
-							<option value="es">ES</option>
-							<option value="de">DE</option>
-						</select>
+						<span>Langue :</span><select id="lang"><option value="fr">FR</option><option value="en">EN</option><option value="es">ES</option><option value="de">DE</option></select>
 					</div>
 					<div>
-						<span>Thème :</span>
-						<select id="theme">
-							<option value="day">Jouw</option>
-							<option value="night">Nuiw</option>
-							<option value="day comic">Bizawe</option>
-							<option value="night comic">Stalker</option>
-							<option value="night rainbow">마릴릴</option>
-							<option value="day hd">Turfu</option>
-							<option value="night hd">Toumiwmiw</option>
-						</select>
-					</div>
-					<div>
-						<span>Alignement :</span><input type="radio" name="align" value="right" id="right"><label for="right">Droite</label><input type="radio" name="align" value="left" id="left"><label for="left">Gauche</label>
-					</div>
-					<div>
-						<span>Affichage :</span><input type="checkbox" id="dt"><label for="dt">Date</label><input type="checkbox" id="hr"><label for="hr">Heure</label>
+						<span>Thème :</span><select id="theme"><option value="night">Toumiwmiw</option><option value="day">Turfu</option><option value="day comic">Bizawe</option><option value="night comic">Stalker</option></select>
 					</div>
 					<div>
 						<span>Silence :</span><input type="checkbox" id="am"><label for="am">Automatique</label>
 					</div>
 					<div>
-						<a href="http://underfoule.xyz/loult/dico-louspeak.html" target="_blank">Dictionnaire</a> &bull; <a href="https://github.com/4577/loult-ng" target="_blank">GitHub</a>
+						<a href="https://pastebin.com/vh0euRJk" target="_blank">Charte</a> &bull; <a href="https://github.com/4577/loult-ng" target="_blank">GitHub</a> &bull; <a href="http://underfoule.xyz/loult/dico-louspeak.html" target="_blank">Dictionnaire</a>
 					</div>
 					<div>
-						<img src="/pokemon/271.gif"><img src="/pokemon/251.gif"><img src="/pokemon/425.gif"><img src="/pokemon/183.gif"><img src="/pokemon/207.gif"><img src="/pokemon/156.gif"><img src="/pokemon/213.gif"><img src="/pokemon/145.gif">
+						<img src="/pokemon/271.gif" title="Développement"><img src="/pokemon/251.gif" title="Hébergement"><img src="/pokemon/425.gif" title="Développement"><img src="/pokemon/183.gif" title="Développement"><img src="/pokemon/207.gif" title="Développement"><img src="/pokemon/156.gif" title="Développement"><img src="/pokemon/213.gif" title="Graphisme"><img src="/pokemon/145.gif" title="Organisation"><img src="/pokemon/120.gif" title="Financement"><img src="/pokemon/001.gif" title="Financement"><img src="/pokemon/007.gif" title="Cohésion"><img src="/pokemon/352.gif" title="Graphisme">
 					</div>
 				</div>
 			</div>
