--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
 	<body>
 		<header id="head">
 			<div>
-				<img src="/img/logo_shiny.svg" alt="Loult 3.0">
+				<img src="/img/logo_shiny.svg" alt="Loult 3.1">
 			</div>
 		</header>
 		<main id="main">
@@ -22,7 +22,7 @@
 			<ul id="userlist"></ul>
 		</main>
 		<footer id="foot">
-			<input autofocus placeholder="Message..." id="input" maxlength="500">
+			<input autofocus placeholder="Message..." id="input" maxlength="300">
 			<div>
 				<i class="material-icons" id="mic">mic_off</i>
 				<i class="material-icons" id="vol">volume_up</i>
@@ -43,7 +43,13 @@
 						<span>Langue :</span><select id="lang"><option value="fr">FR</option><option value="en">EN</option><option value="es">ES</option><option value="de">DE</option></select>
 					</div>
 					<div>
-						<span>Thème :</span><select id="theme"><option value="night">Toumiwmiw</option><option value="day">Turfu</option><option value="day comic">Bizawe</option><option value="night comic">Stalker</option></select>
+						<span>Thème :</span><select id="theme"><option value="cozy">Toumiwmiw</option><option value="compact">Old Skool</option><option value="console">Minitel</option></select>
+					</div>
+					<div>
+						<span>Couleur :</span><select id="color"><option value="night">Nwuiw</option><option value="day">Jouw</option><option value="blue">Emixam</option></select>
+					</div>
+					<div>
+						<span>Police :</span><select id="font"><option value="sans">Turfu</option><option value="comic">Bizawe</option><option value="mono">Termiloult</option></select>
 					</div>
 					<div>
 						<span>Silence :</span><input type="checkbox" id="am"><label for="am">Automatique</label>
