--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
 	<body>
 		<header id="head">
 			<div>
-				<img src="/img/logo_shiny.svg" alt="Loult 3.1">
+				<img src="/img/logo_shiny.svg" alt="Loult 3.2">
 			</div>
 		</header>
 		<main id="main">
@@ -30,7 +30,6 @@
 				<i class="material-icons" id="userswitch">people</i>
 			</div>
 		</footer>
-		<div id="bar"><div id="xp"></div><div id="lv"></div></div>
 		<div id="overlay">
 			<div id="cover"></div>
 			<div id="window">
@@ -43,7 +42,7 @@
 						<span>Langue :</span><select id="lang"><option value="fr">FR</option><option value="en">EN</option><option value="es">ES</option><option value="de">DE</option></select>
 					</div>
 					<div>
-						<span>Thème :</span><select id="theme"><option value="cozy">Toumiwmiw</option><option value="compact">Old Skool</option><option value="console">Minitel</option></select>
+						<span>Thème :</span><select id="theme"><option value="cozy">Toumiwmiw</option><option value="compact">Old Skool</option><option value="console">Minitel</option><option value="fat">Phat Katz</option></select>
 					</div>
 					<div>
 						<span>Couleur :</span><select id="color"><option value="night">Nwuiw</option><option value="day">Jouw</option><option value="blue">Emixam</option></select>
@@ -55,7 +54,7 @@
 						<span>Silence :</span><input type="checkbox" id="am"><label for="am">Automatique</label>
 					</div>
 					<div>
-						<a href="https://pastebin.com/vh0euRJk" target="_blank">Charte</a> &bull; <a href="https://github.com/4577/loult-ng" target="_blank">GitHub</a> &bull; <a href="http://underfoule.xyz/loult/dico-louspeak.html" target="_blank">Dictionnaire</a>
+						<a href="https://pastebin.com/vh0euRJk" target="_blank">Charte</a> &bull; <a href="https://github.com/4577/loult-ng" target="_blank">GitHub</a> &bull; <a href="http://wikiloult.family/" target="_blank">Wiki</a> &bull; <a href="http://underfoule.xyz/loult/dico-louspeak.html" target="_blank">Dico</a>
 					</div>
 					<div>
 						<img src="/pokemon/271.gif" title="Développement"><img src="/pokemon/251.gif" title="Hébergement"><img src="/pokemon/425.gif" title="Développement"><img src="/pokemon/183.gif" title="Développement"><img src="/pokemon/207.gif" title="Développement"><img src="/pokemon/156.gif" title="Développement"><img src="/pokemon/213.gif" title="Graphisme"><img src="/pokemon/145.gif" title="Organisation"><img src="/pokemon/120.gif" title="Financement"><img src="/pokemon/001.gif" title="Financement"><img src="/pokemon/007.gif" title="Cohésion"><img src="/pokemon/352.gif" title="Graphisme">
