--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
 	<body>
 		<header id="head">
 			<div>
-				<img src="/img/logo_shiny.svg" alt="Loult 3.2">
+				<img src="/img/logo_shiny.svg" alt="Loult 3.3.3">
 			</div>
 		</header>
 		<main id="main">
@@ -24,10 +24,7 @@
 		<footer id="foot">
 			<input autofocus placeholder="Message..." id="input" maxlength="300">
 			<div>
-				<i class="material-icons" id="mic">mic_off</i>
-				<i class="material-icons" id="vol">volume_up</i>
-				<i class="material-icons" id="gear">settings</i>
-				<i class="material-icons" id="userswitch">people</i>
+				<i class="material-icons" id="mic">mic_off</i><i class="material-icons" id="vol">volume_up</i><i class="material-icons" id="gear">settings</i><i class="material-icons" id="userswitch">people</i>
 			</div>
 		</footer>
 		<div id="overlay">
@@ -39,13 +36,13 @@
 						<span>Volume :</span><input type="range" value="100" id="volrange">
 					</div>
 					<div>
-						<span>Langue :</span><select id="lang"><option value="fr">FR</option><option value="en">EN</option><option value="es">ES</option><option value="de">DE</option></select>
+						<span>Langue :</span><select id="lang"><option value="fr">Français</option><option value="en">English</option><option value="es">Español</option><option value="de">Deutsch</option></select>
 					</div>
 					<div>
 						<span>Thème :</span><select id="theme"><option value="cozy">Toumiwmiw</option><option value="compact">Old Skool</option><option value="console">Minitel</option><option value="fat">Phat Katz</option></select>
 					</div>
 					<div>
-						<span>Couleur :</span><select id="color"><option value="night">Nwuiw</option><option value="day">Jouw</option><option value="blue">Emixam</option></select>
+						<span>Couleur :</span><select id="color"><option value="night">Nwuiw</option><option value="day">Jouw</option><option value="retro">Zenennw</option><option value="retro_night">Nwoiw</option><option value="blue">Emixam</option></select>
 					</div>
 					<div>
 						<span>Police :</span><select id="font"><option value="sans">Turfu</option><option value="comic">Bizawe</option><option value="mono">Termiloult</option></select>
