--- a/static/index.html
+++ b/static/index.html
@@ -31,23 +31,26 @@
 			<div id="cover"></div>
 			<div id="window">
 				<div>Préférences<i class="material-icons" id="close">clear</i></div>
-				<div>
-					<div>
+				<div id="optionWrapper">
+					<div class="option">
 						<span>Volume :</span><input type="range" value="100" id="volrange">
 					</div>
-					<div>
+					<div class="option">
 						<span>Langue :</span><select id="lang"><option value="fr">Français</option><option value="en">English</option><option value="es">Español</option><option value="de">Deutsch</option></select>
 					</div>
-					<div>
+					<div class="option">
 						<span>Thème :</span><select id="theme"><option value="cozy">Toumiwmiw</option><option value="compact">Old Skool</option><option value="console">Minitel</option><option value="fat">Phat Katz</option></select>
 					</div>
-					<div>
+					<div class="option">
 						<span>Couleur :</span><select id="color"><option value="night">Nwuiw</option><option value="day">Jouw</option><option value="retro">Zenennw</option><option value="retro_night">Nwoiw</option><option value="blue">Emixam</option></select>
 					</div>
-					<div>
+					<div class="option">
 						<span>Police :</span><select id="font"><option value="sans">Turfu</option><option value="comic">Bizawe</option><option value="mono">Termiloult</option></select>
 					</div>
-					<div>
+					<div class="option">
+						<span>Historique :</span><select id="history"><option value='full'>Full</option><option value=50>50 messages</option><option value=100>100 messages</option></option><option value=250>250 messages</option><option value=500>500 messages</option></select>
+					</div>
+					<div class="option">
 						<span>Silence :</span><input type="checkbox" id="am"><label for="am">Automatique</label>
 					</div>
 					<div>
