Fix des contributeurs

--- a/static/index.html
+++ b/static/index.html
@@ -57,7 +57,17 @@
 						<a href="https://pastebin.com/vh0euRJk" target="_blank">Charte</a> &bull; <a href="https://github.com/4577/loult-ng" target="_blank">GitHub</a> &bull; <a href="http://wikiloult.family/" target="_blank">Wiki</a> &bull; <a href="http://underfoule.xyz/loult/dico-louspeak.html" target="_blank">Dico</a>
 					</div>
 					<div>
-						<img src="/pokemon/271.gif" title="Développement"><img src="/pokemon/251.gif" title="Hébergement"><img src="/pokemon/425.gif" title="Développement"><img src="/pokemon/183.gif" title="Développement"><img src="/pokemon/207.gif" title="Développement"><img src="/pokemon/156.gif" title="Développement"><img src="/pokemon/213.gif" title="Graphisme"><img src="/pokemon/145.gif" title="Organisation"><img src="/pokemon/120.gif" title="Financement"><img src="/pokemon/001.gif" title="Financement"><img src="/pokemon/007.gif" title="Cohésion"><img src="/pokemon/352.gif" title="Graphisme">
+						<img src="/img/pokemon/small/271.gif" title="Développement">
+						<img src="/img/pokemon/small/425.gif" title="Développement">
+						<img src="/img/pokemon/small/183.gif" title="Développement">
+						<img src="/img/pokemon/small/207.gif" title="Développement">
+						<img src="/img/pokemon/small/156.gif" title="Développement">
+						<img src="/img/pokemon/small/213.gif" title="Graphisme">
+						<img src="/img/pokemon/small/145.gif" title="Organisation">
+						<img src="/img/pokemon/small/120.gif" title="Financement">
+						<img src="/img/pokemon/small/01.gif" title="Financement">
+						<img src="/img/pokemon/small/007.gif" title="Cohésion">
+						<img src="/img/pokemon/small/352.gif" title="Graphisme">
 					</div>
 				</div>
 			</div>
