add new checkbox to enable/disable Video/Image

--- a/static/index.html
+++ b/static/index.html
@@ -51,6 +51,9 @@
 						<span>Historique :</span><select id="history"><option value='full'>Full</option><option value=50>50 messages</option><option value=100>100 messages</option></option><option value=250>250 messages</option><option value=500>500 messages</option></select>
 					</div>
 					<div class="option">
+						<span>Video/Image :</span><input type="checkbox" id="embed" checked>
+					</div>	
+					<div class="option">
 						<span>Silence :</span><input type="checkbox" id="am"><label for="am">Automatique</label>
 					</div>
 					<div>
