--- a/static/index.html
+++ b/static/index.html
@@ -57,7 +57,7 @@
 						<span>Silence :</span><input type="checkbox" id="am"><label for="am">Automatique</label>
 					</div>
 					<div>
-						<a href="https://pastebin.com/vh0euRJk" target="_blank">Charte</a> &bull; <a href="https://github.com/4577/loult-ng" target="_blank">GitHub</a> &bull; <a href="http://wikiloult.family/" target="_blank">Wiki</a> &bull; <a href="http://underfoule.xyz/loult/dico-louspeak.html" target="_blank">Dico</a>
+						<a href="/magnacharta.html" target="_blank">Charte</a> &bull; <a href="https://github.com/4577/loult-ng" target="_blank">GitHub</a> &bull; <a href="http://wikiloult.family/" target="_blank">Wiki</a> &bull; <a href="http://underfoule.xyz/loult/dico-louspeak.html" target="_blank">Dico</a>
 					</div>
 					<div>
 						<img src="/img/pokemon/small/271.gif" title="Développement">
