icones coffre, flute, pokedex, pokeball .svg

--- a/static/index.html
+++ b/static/index.html
@@ -24,7 +24,18 @@
 		<footer id="foot">
 			<input autofocus placeholder="Message..." id="input" maxlength="300">
 			<div>
-				<i class="material-icons" id="mic">mic_off</i><i class="material-icons" id="vol">volume_up</i><i class="material-icons" id="gear">settings</i><i class="material-icons" id="userswitch">people</i>
+				<i class="material-icons">
+					<img src="img/icons/coffrenb.svg" alt="inventaire" id="mic">	
+				</i>
+				<i class="material-icons">
+					<img src="img/icons/flute.svg" alt="" id="vol">	
+				</i>
+				<i class="material-icons">
+					<img src="img/icons/pokedex.svg" alt="" id="gear">	
+				</i>
+				<i class="material-icons">
+					<img src="img/icons/pokeball.svg" alt="" id="userswitch">	
+				</i>
 			</div>
 		</footer>
 		<div id="overlay">
