--- a/static/index.html
+++ b/static/index.html
@@ -24,18 +24,22 @@
 		<footer id="foot">
 			<input autofocus placeholder="Message..." id="input" maxlength="300">
 			<div>
-				<i class="material-icons">
-					<img src="img/icons/coffrenb.svg" alt="inventaire" id="mic">	
-				</i>
-				<i class="material-icons">
+				<div class="icon">
+					<img src="img/icons/coffrenb.svg" alt="" id="mic">	
+					<span class="tooltiptext">inventaire</span>
+				</div>
+				<div class="icon">
 					<img src="img/icons/flute.svg" alt="" id="vol">	
-				</i>
-				<i class="material-icons">
+					<span class="tooltiptext">son</span>
+				</div>
+				<div class="icon">
 					<img src="img/icons/pokedex.svg" alt="" id="gear">	
-				</i>
-				<i class="material-icons">
+					<span class="tooltiptext">options / wiki</span>
+				</div>
+				<div class="icon">
 					<img src="img/icons/pokeball.svg" alt="" id="userswitch">	
-				</i>
+					<span class="tooltiptext">menu</span>
+				</div->
 			</div>
 		</footer>
 		<div id="overlay">
