pokéflute qui change d'état quand on clique

--- a/static/index.html
+++ b/static/index.html
@@ -25,20 +25,20 @@
 			<input autofocus placeholder="Message..." id="input" maxlength="300">
 			<div>
 				<div class="icon">
-					<img src="img/icons/coffrenb.svg" alt="" id="mic">	
+					<img src="img/icons/coffrenb.svg" alt="" id="mic"/>	
 					<span class="tooltiptext">inventaire</span>
 				</div>
-				<div class="icon">
-					<img src="img/icons/flute.svg" alt="" id="vol">	
+				<div class="icon"/> 
+					<img src="img/icons/flute.svg" alt="" id="vol"/>	
 					<span class="tooltiptext">son</span>
 				</div>
 				<div class="icon">
-					<img src="img/icons/pokedex.svg" alt="" id="gear">	
-					<span class="tooltiptext">options / wiki</span>
+					<img src="img/icons/pokedex.svg" alt="" id="gear"/>	
+					<span class="tooltiptext">menu / wiki</span>
 				</div>
 				<div class="icon">
-					<img src="img/icons/pokeball.svg" alt="" id="userswitch">	
-					<span class="tooltiptext">menu</span>
+					<img src="img/icons/pokeball.svg" alt="" id="userswitch"/>	
+					<span class="tooltiptext">liste</span>
 				</div->
 			</div>
 		</footer>
