--- a/static/index.html
+++ b/static/index.html
@@ -23,9 +23,10 @@
 		</main>
 		<footer id="foot">
 			<input autofocus placeholder="Message..." id="input" maxlength="300">
+			<i class="curseur"></i>
 			<div>
 				<div class="icon">
-					<img src="img/icons/coffrenb.svg" alt="" id="mic"/>	
+					<img src="img/icons/coffre.svg" alt="" id="chest"/>	
 					<span class="tooltiptext">inventaire</span>
 				</div>
 				<div class="icon"/> 
@@ -37,7 +38,7 @@
 					<span class="tooltiptext">menu / wiki</span>
 				</div>
 				<div class="icon">
-					<img src="img/icons/pokeball.svg" alt="" id="userswitch"/>	
+					<img src="img/icons/masterball.svg" alt="" id="userswitch"/>	
 					<span class="tooltiptext">liste</span>
 				</div->
 			</div>
@@ -54,7 +55,7 @@
 						<span>Langue :</span><select id="lang"><option value="fr">Français</option><option value="en">English</option><option value="es">Español</option><option value="de">Deutsch</option></select>
 					</div>
 					<div class="option">
-						<span>Thème :</span><select id="theme"><option value="cozy">Toumiwmiw</option><option value="compact">Old Skool</option><option value="console">Minitel</option><option value="fat">Phat Katz</option></select>
+						<span>Thème :</span><select id="theme"><option value="bibw">Bibw (v0.5)</option><option value="cozy">Toumiwmiw</option><option value="compact">Old Skool</option><option value="console">Minitel</option><option value="fat">Phat Katz</option></select>
 					</div>
 					<div class="option">
 						<span>Couleur :</span><select id="color"><option value="night">Nwuiw</option><option value="day">Jouw</option><option value="retro">Zenennw</option><option value="retro_night">Nwoiw</option><option value="blue">Emixam</option></select>
