--- a/static/index.html
+++ b/static/index.html
@@ -26,19 +26,24 @@
 			<i class="curseur"></i>
 			<div>
 				<div class="icon">
-					<img src="img/icons/coffre.svg" alt="" id="chest"/>	
+					<img src="img/icons/coffre.svg" id="chest"/>	
 					<span class="tooltiptext">inventaire</span>
 				</div>
-				<div class="icon"/> 
-					<img src="img/icons/flute.svg" alt="" id="vol"/>	
+				<div id="vol" class="icon"/> 
+					<img src="img/icons/flute.svg"/>	
 					<span class="tooltiptext">son</span>
 				</div>
-				<div class="icon">
-					<img src="img/icons/pokedex.svg" alt="" id="gear"/>	
+				<div class="icon" id="gear">
+				<script>			
+					//document.getElementById('pokedex').style.display = "block";
+					//document.getElementById('pokedex').style.display = "none";
+				</script>
+					<img id="pokedex" src="img/icons/pokedex.svg"/>	
+					<img src="img/icons/pokedex_on.svg"/>	
 					<span class="tooltiptext">menu / wiki</span>
 				</div>
-				<div class="icon">
-					<img src="img/icons/masterball.svg" alt="" id="userswitch"/>	
+				<div class="icon" id="userswitch">
+					<img src="img/icons/masterball.svg"/>	
 					<span class="tooltiptext">liste</span>
 				</div->
 			</div>
@@ -55,7 +60,7 @@
 						<span>Langue :</span><select id="lang"><option value="fr">Français</option><option value="en">English</option><option value="es">Español</option><option value="de">Deutsch</option></select>
 					</div>
 					<div class="option">
-						<span>Thème :</span><select id="theme"><option value="bibw">Bibw (v0.5)</option><option value="cozy">Toumiwmiw</option><option value="compact">Old Skool</option><option value="console">Minitel</option><option value="fat">Phat Katz</option></select>
+						<span>Thème :</span><select id="theme"><option value="bibw">Minimal Bibw 0.7b</option><option value="cozy">Toumiwmiw</option><option value="compact">Old Skool</option><option value="console">Minitel</option><option value="fat">Phat Katz</option></select>
 					</div>
 					<div class="option">
 						<span>Couleur :</span><select id="color"><option value="night">Nwuiw</option><option value="day">Jouw</option><option value="retro">Zenennw</option><option value="retro_night">Nwoiw</option><option value="blue">Emixam</option></select>
