fix de la flute

--- a/static/index.html
+++ b/static/index.html
@@ -29,8 +29,8 @@
 					<img src="img/icons/coffre.svg" id="chest"/>	
 					<span class="tooltiptext">inventaire</span>
 				</div>
-				<div id="vol" class="icon"/> 
-					<img src="img/icons/flute.svg"/>	
+				<div class="icon"/> 
+					<img src="img/icons/flute.svg" id="vol"/>	
 					<span class="tooltiptext">son</span>
 				</div>
 				<div class="icon" id="gear">
