--- a/static/index.html
+++ b/static/index.html
@@ -54,28 +54,28 @@
 				<div>Préférences<i class="material-icons" id="close">clear</i></div>
 				<div id="optionWrapper">
 					<div class="option">
-						<span>Volume :</span><input type="range" value="100" id="volrange">
+						<span>Volume</span><input type="range" value="100" id="volrange">
 					</div>
 					<div class="option">
-						<span>Langue :</span><select id="lang"><option value="fr">Français</option><option value="en">English</option><option value="es">Español</option><option value="de">Deutsch</option></select>
+						<span>Langue</span><select id="lang"><option value="fr">Français</option><option value="en">English</option><option value="es">Español</option><option value="de">Deutsch</option></select>
 					</div>
 					<div class="option">
-						<span>Thème :</span><select id="theme"><option value="bibw">Minimal Bibw 0.7b</option><option value="cozy">Toumiwmiw</option><option value="compact">Old Skool</option><option value="console">Minitel</option><option value="fat">Phat Katz</option></select>
+						<span>Thème</span><select id="theme"><option value="bibw">Minimal Bibw 0.8</option><option value="cozy">Toumiwmiw</option><option value="compact">Old Skool</option><option value="console">Minitel</option><option value="fat">Phat Katz</option></select>
 					</div>
 					<div class="option">
-						<span>Couleur :</span><select id="color"><option value="night">Nwuiw</option><option value="day">Jouw</option><option value="retro">Zenennw</option><option value="retro_night">Nwoiw</option><option value="blue">Emixam</option></select>
+						<span>Couleur</span><select id="color"><option value="night">Nwuiw</option><option value="day">Jouw</option><option value="retro">Zenennw</option><option value="retro_night">Nwoiw</option><option value="blue">Emixam</option></select>
 					</div>
 					<div class="option">
-						<span>Police :</span><select id="font"><option value="sans">Turfu</option><option value="comic">Bizawe</option><option value="mono">Termiloult</option></select>
+						<span>Police</span><select id="font"><option value="sans">Turfu</option><option value="comic">Bizawe</option><option value="mono">Termiloult</option></select>
 					</div>
 					<div class="option">
-						<span>Historique :</span><select id="history"><option value='full'>Full</option><option value=50>50 messages</option><option value=100>100 messages</option></option><option value=250>250 messages</option><option value=500>500 messages</option></select>
+						<span>Historique</span><select id="history"><option value='full'>Full</option><option value=50>50 messages</option><option value=100>100 messages</option></option><option value=250>250 messages</option><option value=500>500 messages</option></select>
 					</div>
 					<div class="option">
-						<span>Video/Image :</span><input type="checkbox" id="embed" checked>
+						<span>Video/Image</span><input type="checkbox" id="embed" checked>
 					</div>	
 					<div class="option">
-						<span>Silence :</span><input type="checkbox" id="am"><label for="am">Automatique</label>
+						<span>Silence</span><input type="checkbox" id="am"><label for="am">Automatique</label>
 					</div>
 					<div>
 						<a href="/magnacharta.html" target="_blank">Charte</a> &bull; <a href="https://github.com/4577/loult-ng" target="_blank">GitHub</a> &bull; <a href="http://wikiloult.family/" target="_blank">Wiki</a> &bull; <a href="http://underfoule.xyz/loult/dico-louspeak.html" target="_blank">Dico</a>
