Ajout de l'italien, che cazzo

--- a/static/index.html
+++ b/static/index.html
@@ -52,7 +52,13 @@
 						<span>Volume :</span><input type="range" value="100" id="volrange">
 					</div>
 					<div class="option">
-						<span>Langue :</span><select id="lang"><option value="fr">Français</option><option value="en">English</option><option value="es">Español</option><option value="de">Deutsch</option></select>
+						<span>Langue :</span><select id="lang">
+						<option value="fr">Français</option>
+						<option value="en">English</option>
+						<option value="es">Español</option>
+						<option value="de">Deutsch</option>
+						<option value="it">Italiano</option>
+					</select>
 					</div>
 					<div class="option">
 						<span>Thème :</span><select id="theme"><option value="bibw">Bibw (v0.5)</option><option value="cozy">Toumiwmiw</option><option value="compact">Old Skool</option><option value="console">Minitel</option><option value="fat">Phat Katz</option></select>
