cleaner way to position the popover (only css)

--- a/static/index.html
+++ b/static/index.html
@@ -26,8 +26,8 @@
       <i class="curseur"></i>
       <div class="icon" id="chest">
 	<img src="img/icons/coffre.svg"/>
-		<div id="inventory_display"></div>
-	  <span class="tooltiptext">inventaire</span>
+	<span class="tooltiptext" id="chest-tooltip">inventaire</span>
+	<div id="inventory_display"></div>
 	</div>
 	<div id="vol" class="icon"/> <!-- strange heh -->
 	<img src="img/icons/flute.svg"/>	
