--- a/static/index.html
+++ b/static/index.html
@@ -23,28 +23,22 @@
     </main>
     <footer id="foot">
       <input autofocus placeholder="Message..." id="input" maxlength="300">
-      <i class="curseur"></i>
       <div class="icon" id="chest">
-	<img src="img/icons/coffre.svg"/>
-	<span class="tooltiptext" id="chest-tooltip">inventaire</span>
-	<div id="inventory_display"></div>
+            <img src="img/icons/coffre.svg"/>
+            <div id="inventory_display"></div>
 	</div>
 	<div id="vol" class="icon"/> <!-- strange heh -->
-	<img src="img/icons/flute.svg"/>	
-	<span class="tooltiptext">son</span>
+            <img src="img/icons/flute.svg"/>	
+            <span class="tooltiptext">son</span>
       </div>
       <div class="icon" id="gear">
-	<script>			
-	  //document.getElementById('pokedex').style.display = "block";
-	  //document.getElementById('pokedex').style.display = "none";
-	</script>
-	<img id="pokedex" src="img/icons/pokedex.svg"/>	
-	<img src="img/icons/pokedex_on.svg"/>	
-	<span class="tooltiptext">menu / wiki</span>
+            <img id="pokedex" src="img/icons/pokedex.svg"/>	
+            <img src="img/icons/pokedex_on.svg"/>	
+	      <span class="tooltiptext">menu / wiki</span>
       </div>
       <div class="icon" id="userswitch">
-	<img src="img/icons/masterball.svg"/>	
-	<span class="tooltiptext">liste</span>
+            <img src="img/icons/masterball.svg"/>	
+            <span class="tooltiptext">liste</span>
       </div>
 </footer>
 <div id="overlay">
@@ -59,7 +53,7 @@
 	<span>Langue :</span><select id="lang"><option value="fr">Français</option><option value="en">English</option><option value="es">Español</option><option value="de">Deutsch</option></select>
       </div>
       <div class="option">
-	<span>Thème :</span><select id="theme"><option value="bibw">Minimal Bibw 0.7b</option><option value="cozy">Toumiwmiw</option><option value="compact">Old Skool</option><option value="console">Minitel</option><option value="fat">Phat Katz</option></select>
+	<span>Thème :</span><select id="theme"><option value="bibw">Minimal Bibw 0.8c</option><option value="cozy">Toumiwmiw</option><option value="compact">Old Skool</option><option value="console">Minitel</option><option value="fat">Phat Katz</option></select>
       </div>
       <div class="option">
 	<span>Couleur :</span><select id="color"><option value="night">Nwuiw</option><option value="day">Jouw</option><option value="retro">Zenennw</option><option value="retro_night">Nwoiw</option><option value="blue">Emixam</option></select>
