bank popover menu above the input
Former-commit-id: ce7b6ee7b9cbe558701cda5e54a84efbcaf8cb2a

--- a/static/index.html
+++ b/static/index.html
@@ -22,6 +22,7 @@
       <ul id="userlist"></ul>
     </main>
     <footer id="foot">
+      <div id="bank_display"></div>
       <input autofocus placeholder="Message..." id="input" maxlength="300">
       <div class="icon" id="chest">
             <img src="img/icons/coffre.svg"/>
