--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
     <title>Loult.family</title>
     <meta charset="utf-8">
     <meta name="description" content="Le célèbre t'chat Pokémon, anciennement Lou.lt">
-    <meta name="viewport" content="width=device-width, initial-scale=0.7">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="/style.css">
@@ -18,7 +18,8 @@
     </header>
     <main id="main">
       <div id="underlay"></div>
-      <div id="chat"></div>
+      <div id="chat">
+      </div>
       <ul id="userlist"></ul>
     </main>
     <footer id="foot">
@@ -54,7 +55,7 @@
 	<span>Langue :</span><select id="lang"><option value="fr">Français</option><option value="en">English</option><option value="es">Español</option><option value="de">Deutsch</option></select>
       </div>
       <div class="option">
-	<span>Thème :</span><select id="theme"><option value="bibw">Minimal Bibw 0.8c</option><option value="cozy">Toumiwmiw</option><option value="compact">Old Skool</option><option value="console">Minitel</option><option value="fat">Phat Katz</option></select>
+	<span>Thème :</span><select id="theme"><option value="bibw">Minimal Bibw 0.9</option><option value="cozy">Toumiwmiw</option><option value="compact">Old Skool</option><option value="console">Minitel</option><option value="fat">Phat Katz</option></select>
       </div>
       <div class="option">
 	<span>Couleur :</span><select id="color"><option value="night">Nwuiw</option><option value="day">Jouw</option><option value="retro">Zenennw</option><option value="retro_night">Nwoiw</option><option value="blue">Emixam</option></select>
