inventaire + thème bibw 1.0
Former-commit-id: afbadae8d49d19b1bd3022c2be5f32e0503b612f

--- a/static/index.html
+++ b/static/index.html
@@ -55,13 +55,13 @@
 	<span>Langue :</span><select id="lang"><option value="fr">Français</option><option value="en">English</option><option value="es">Español</option><option value="de">Deutsch</option></select>
       </div>
       <div class="option">
-	<span>Thème :</span><select id="theme"><option value="bibw">Minimal Bibw 0.9</option><option value="cozy">Toumiwmiw</option><option value="compact">Old Skool</option><option value="console">Minitel</option><option value="fat">Phat Katz</option></select>
+	<span>Thème :</span><select id="theme"><option value="bibw">Minimal Bibw</option><option value="cozy">Toumiwmiw</option><option value="compact">Old Skool</option><option value="console">Minitel</option><option value="fat">Phat Katz</option></select>
       </div>
       <div class="option">
 	<span>Couleur :</span><select id="color"><option value="night">Nwuiw</option><option value="day">Jouw</option><option value="retro">Zenennw</option><option value="retro_night">Nwoiw</option><option value="blue">Emixam</option></select>
       </div>
       <div class="option">
-	<span>Police :</span><select id="font"><option value="sans">Turfu</option><option value="comic">Bizawe</option><option value="mono">Termiloult</option></select>
+	<span>Police :</span><select id="font"><option value="opensans">Open Kaniw</option><option value="sans">Turfu</option><option value="comic">Bizawe</option><option value="mono">Termiloult</option></select>
       </div>
       <div class="option">
 	<span>Historique :</span><select id="history"><option value='full'>Full</option><option value=50>50 messages</option><option value=100>100 messages</option><option value=250>250 messages</option><option value=500>500 messages</option></select>
