misajouw du lien du wiki, wpse
Former-commit-id: df406523e115261c9260133256169fc3a8cfbf31

--- a/static/index.html
+++ b/static/index.html
@@ -79,7 +79,7 @@
 	<span>Silence :</span><input type="checkbox" id="am"><label for="am">Automatique</label>
       </div>
       <div>
-	<a href="/magnacharta.html" target="_blank">Charte</a> &bull; <a href="https://github.com/loult-elte-fwere/loult-ng" target="_blank">GitHub</a> &bull; <a href="http://wikiloult.family/" target="_blank">Wiki</a> &bull; <a href="http://underfoule.xyz/loult/dico-louspeak.html" target="_blank">Dico</a>
+	<a href="/magnacharta.html" target="_blank">Charte</a> &bull; <a href="https://github.com/loult-elte-fwere/loult-ng" target="_blank">GitHub</a> &bull; <a href="http://wiki.loult.family/" target="_blank">Wiki</a> &bull; <a href="http://underfoule.xyz/loult/dico-louspeak.html" target="_blank">Dico</a>
       </div>
       <div>
 	<img src="/img/pokemon/small/271.gif" title="Développement">
