--- a/static/index.html
+++ b/static/index.html
@@ -25,24 +25,107 @@
     <footer id="foot">
       <div id="bank_display"></div>
       <input autofocus placeholder="Message..." id="input" maxlength="300">
-      <div class="icon" id="chest">
-            <img src="img/icons/coffre.svg"/>
-            <div id="inventory_display"></div>
-	</div>
-	<div id="vol" class="icon"/> <!-- strange heh -->
+	<div class="icon" id="vol">
             <img src="img/icons/flute.svg"/>
             <span class="tooltiptext">son</span>
       </div>
+      <div class="icon" id="chest" style="display: none;">
+            <img src="img/icons/coffre.svg" />
+            <div id="inventory_display"></div>
+      </div>
       <div class="icon" id="gear">
-            <img id="pokedex" src="img/icons/pokedex.svg"/>
-            <img src="img/icons/pokedex_on.svg"/>
-	      <span class="tooltiptext">menu / wiki</span>
+            <a href="http://wiki.loult.family/last_edits" target="_blank">
+                  <img id="pokedex" src="img/icons/pokedex.svg" onmouseover="hover(this);" onmouseout="unhover(this);" />
+            </a>
+            <span class="tooltiptext">wiki</span>
+      </div>
+      <div class="icon" id="wheel">
+            <img class="" id="roue" src="img/icons/roue-crantee.svg" onclick ="openMenu()">
+            <span class="tooltiptext">menu</span>           
       </div>
       <div class="icon" id="userswitch">
             <img src="img/icons/masterball.svg"/>
             <span class="tooltiptext">liste</span>
       </div>
 </footer>
+
+<div class="menu-display menu-display-false" id="menu">
+      <div>
+            <span>Volume</span>
+            <input type="range" id="volrange" value="100">
+      </div>
+      <div>
+            <span>Langue</span>
+            <select id="lang">
+                  <option value="fr">Français</option>
+                  <option value="en">Anglais</option>
+                  <option value="es">Espagnol</option>
+                  <option value="de">Allemand</option>
+                  <option value="it">Italien</option>
+            </select>
+      </div>
+      <div>
+            <span>Thème</span>
+            <select id="theme">
+                  <option value="bibw">Bibw</option>
+                  <option value="cozy">Toumiwmiw</option>
+                  <option value="compact">Old school</option>
+                  <option value="console">Minitel</option>
+                  <option value="fat">Phat Katz</option>
+            </select>
+      </div>
+      <div>
+            <span>Couleur</span>
+            <select id="color">
+                  <option value="night">Nwuiw</option>
+                  <option value="day">Jouw</option>
+                  <option value="retro">Zenennw</option>
+                  <option value="retro_night">Noiw</option>
+                  <option value="blue">Emixam</option>
+            </select>
+      </div>
+      <div>
+            <span>Police</span>
+            <select id="font">
+                  <option value="sans">Turfu</option>
+                  <option value="comic">Bizaw</option>
+                  <option value="mono">Termiloult</option>
+            </select>
+      </div>
+      <div>
+            <span>Historique</span>
+            <select id="history">
+                  <option value="full">full</option>
+                  <option value="50">50</option>
+                  <option value="100">100</option>
+                  <option value="250">250</option>
+                  <option value="500">500</option>
+                  <option value="1000">1000</option>
+                  <option value="2000">2000</option>
+                  <option value="5000">5000</option>
+                  <option value="10000">10000</option>
+            </select>
+      </div>
+      <div id="VideoImageSilence">
+            <div>
+                  <span>Vidéo/image</span>
+                  <!--span>Silence</span-->
+            </div>
+            <div>
+                  <input type="checkbox" id="embed">
+                  <!--input type="checkbox"-->
+            </div>
+            <div>
+                  <!--span>Automatique</span-->
+            </div>
+      </div>
+      <div id="menu-footer">
+            <a href="https://loult.family/magnacharta.html" target="_blank">Charte</a>
+            <a href="https://github.com/loult-elte-fwere/loult-ng" target="_blank">Github</a>
+            <a href="http://loult.wordpress.com" target="_blank"><img class="pokeball pokeballMenu" src="img/icons/pokeball.svg" /> Blog</a>
+      </div>
+</div>
+
 <div id="overlay">
   <div id="cover"></div>
   <div id="window">
